# oben

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: build.yml
.github/workflows/: build.yml
organisation/: tasks.csv
src/: abnn.rs  evolution.rs  lib.rs
src/abnn/: dendrite.rs  interactor.rs  network.rs  neuron.rs  parameters.rs
src/abnn/neuron/: tests.rs
src/evolution/: binary.rs  chemistry.rs  environment.rs  function.rs  gene.rs  helper.rs  neuron.rs  parameter.rs.bak  population.rs  protein.rs  resource.rs
src/evolution/binary/: binary_chemistry.rs  binary_mutation.rs  tests.rs
src/evolution/binary/tests/: test_binary_substrate.rs
src/evolution/environment/: configuration.rs  execution.rs  mutation.rs
src/evolution/environment/mutation/: tests.rs
src/evolution/function/: function_mutation.rs
src/evolution/gene/: sensor.rs  tests.rs
src/evolution/gene/sensor/: test_input.rs  test_output.rs  test_shared.rs
src/evolution/gene/tests/: test_cross_over.rs  test_genome.rs
src/evolution/helper/: nlgbf.rs  noop.rs  testing.rs  tests.rs
src/evolution/neuron/: simple_dendrite.rs  simple_neuron.rs  simple_neuron_audio_sensor.rs  simple_neuron_parameter_sensor.rs  simple_neuron_text_sensor.rs  simple_neuronal_mutation.rs
src/evolution/neuron/simple_dendrite/: test_activation.rs  test_threshold.rs
src/evolution/neuron/simple_neuron/: tests.rs
src/evolution/neuron/simple_neuron_audio_sensor/: audio_output_sixteen_bit.rs
src/evolution/protein/: sensor.rs
src/evolution/protein/sensor/: test_input.rs  (+1 more)
src/evolution/resource/: tests.rs
(+3 files in other folders)
