[package]
name = "oben"
version = "0.1.0"
authors = ["at-robins <30956028+at-robins@users.noreply.github.com>"]
edition = "2021"

[dependencies]
approx = "0.5"
bitvec = {version = "0.17.4", features = ["serde"]}
rand = "0.8.4"
rand_distr = "0.4.2"
serde = "1.0.131"
uuid = {version = "0.8.2", features = ["serde", "v1"]}
rayon = "1.5.1"
rmp-serde = "0.15.5"
