[package]
name = "oben"
version = "0.1.0"
authors = ["at-robins <30956028+at-robins@users.noreply.github.com>"]
edition = "2021"

[dependencies]
approx = "0.5"
bitvec = {version = "1.0.1", features = ["serde"]}
derive_builder = "0.12.0"
lazy_static = "1.4.0"
parking_lot = { version = "0.12", features = ["serde"] }
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.5.1"
rmp-serde = "1.1.1"
serde = {version = "1.0.131", features = ["derive", "rc"]}
uuid = {version = "1.3.0", features = ["serde", "v1"]}
wav = "1.0.0"
